# msys2-texlive

./: .gitignore  README.md  download_archives.py  github_handler.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
scripts/: update_release_body.py
tests/: conftest.py  test_parser.py  test_requests_handler.py  test_utils.py
texlive/: __main__.py  constants.py  file_creator.py  github_handler.py  logger.py  main.py  pkgbuilder.py  requests_handler.py  texlive.asc  utils.py  verify_files.py
texlive/recipes/: PKGBUILD-common.jinjatemplate  PKGBUILD-texlive-bin.jinjatemplate  PKGBUILD-texlive-core.jinjatemplate
