[tool.poetry]
name = "msys2-texlive"
version = "0.1.0"
description = ""
authors = ["Naveen M K <naveen521kk@gmail.com>"]
packages = [
    { include = "texlive" },
]
[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.25.1"
PyGithub = "^1.54.1" 
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
mypy = "^1"
flake8 = "^6"
black = "^23.3"
pytest = "^7.2"
coverage = "^7"
pytest-cov = "^4"
hypothesis = "^6.10"
types-requests = "^2"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"msys2-texlive" = "texlive.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.run]
omit = ["*tests*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.pytest.ini_options]
addopts = "--cov=texlive --cov-report xml --cov-report term"
